@@ -5,9 +5,8 @@ import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.commons.lang.StringUtils;
-
 import com.google.common.annotations.Beta;
+import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 
 @Beta
@@ -38,7 +37,7 @@ public final class NamePrettyfier
 
     public static String create( final String originalName )
     {
-        if ( StringUtils.isBlank( originalName ) )
+        if ( Strings.nullToEmpty( originalName ).isBlank() )
         {
             throw new IllegalArgumentException( "Generate name failed; Original name cannot be empty or blank" );
         }
@@ -55,7 +54,7 @@ public final class NamePrettyfier
 
         prettifiedPathName = transcribe( prettifiedPathName );
 
-        if ( StringUtils.isBlank( prettifiedPathName ) )
+        if ( Strings.nullToEmpty( prettifiedPathName ).isBlank() )
         {
             return DEFAULT_PATHNAME;
         }
@@ -65,7 +64,7 @@ public final class NamePrettyfier
 
     private static String replaceTrailingHyphens( String prettifiedName )
     {
-        if ( StringUtils.isBlank( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isBlank() )
         {
             return "";
         }
@@ -77,7 +76,7 @@ public final class NamePrettyfier
 
     private static String replaceHyphensAroundDot( String prettifiedName )
     {
-        if ( StringUtils.isBlank( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isBlank() )
         {
             return "";
         }
@@ -89,7 +88,7 @@ public final class NamePrettyfier
 
     private static String ensureNiceBeginningAndEnding( String prettifiedName )
     {
-        if ( StringUtils.isBlank( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isBlank() )
         {
             return "";
         }
@@ -113,7 +112,7 @@ public final class NamePrettyfier
 
     private static String replaceWithHyphens( String prettifiedName )
     {
-        if ( StringUtils.isEmpty( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isEmpty() )
         {
             return "";
         }
@@ -128,7 +127,7 @@ public final class NamePrettyfier
 
     private static String makeLowerCase( String prettifiedName )
     {
-        if ( StringUtils.isEmpty( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isEmpty() )
         {
             return "";
         }
@@ -139,7 +138,7 @@ public final class NamePrettyfier
 
     private static String replaceBlankSpaces( String prettifiedName )
     {
-        if ( StringUtils.isEmpty( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isEmpty() )
         {
             return "";
         }
@@ -153,7 +152,7 @@ public final class NamePrettyfier
 
     private static String removeUnsafeCharacters( String prettifiedName )
     {
-        if ( StringUtils.isEmpty( prettifiedName ) )
+        if ( Strings.nullToEmpty( prettifiedName ).isEmpty() )
         {
             return "";
         }
