@@ -6,7 +6,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.apache.commons.lang.StringUtils;
 import org.osgi.service.component.ComponentContext;
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
@@ -14,6 +13,7 @@ import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.google.common.base.Strings;
 import com.google.common.collect.Lists;
 
 import com.enonic.xp.app.ApplicationInstallationParams;
@@ -101,7 +101,7 @@ public class DumpServiceImpl
         }
 
         final String dumpName = params.getDumpName();
-        if ( StringUtils.isBlank( dumpName ) )
+        if ( Strings.nullToEmpty( dumpName ).isBlank() )
         {
             throw new RepoDumpException( "dump name cannot be empty" );
         }
