@@ -2,8 +2,7 @@ package com.enonic.xp.portal.impl.rendering;
 
 import java.text.MessageFormat;
 
-import org.apache.commons.lang.StringUtils;
-
+import com.google.common.base.Strings;
 import com.google.common.html.HtmlEscapers;
 import com.google.common.net.MediaType;
 
@@ -79,7 +78,7 @@ public abstract class DescriptorBasedComponentRenderer<R extends DescriptorBased
             if ( renderMode == RenderMode.EDIT && contentType != null && contentType.withoutParameters().type().equals( "text" ) )
             {
                 final Object bodyObj = portalResponse.getBody();
-                if ( ( bodyObj == null ) || bodyObj instanceof String && StringUtils.isBlank( (String) bodyObj ) )
+                if ( ( bodyObj == null ) || bodyObj instanceof String && Strings.nullToEmpty( (String) bodyObj ).isBlank() )
                 {
                     if ( portalResponse.getStatus().equals( HttpStatus.METHOD_NOT_ALLOWED ) )
                     {
